styles/distance.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro:200,400');

/* For distance.html only: */

.bannerDistance {
    margin-top: 100px;
    height: 300px;
    width: 100%;
    /*  img from pixabay */
    background: url("..//images/putOnMask.png");
    background-size: 100%;
    background-repeat: no-repeat;
}

h1#distance {
    font-size: 2rem;
    position: absolute;
    left: 38%;
    right: 50%;
    top: 38%;
    white-space: nowrap;
    color: #fff;
}

#distanceMain {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(2, 1fr);
}

#negativeDistance {
    grid-column: 2/6;
}

#positiveDistance {
    grid-column: 2/6;
    grid-row: 2/3;
}

.hDistance {
    color: #fff;
    text-align: center;
    margin-top: 5%;
    font-size: 140%;
}

a.readMore {
    padding-top: 2em;
    color: rgb(56, 91, 189);
}

.distanceCap {
    border-top: 1em;
    padding: 1em;
}

.pDistance {
    color: #fff;
    text-align: left;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 15%;
    font-size: 90%;
}

.distances {
    display: flex;
    margin-top: 10%;
    margin-bottom: 10%;
    width: 100%;
    background-color: #064f50;
    border-radius: 10%;
    /* border: #064f50 1px solid; */
}

img.distanceImg {
    max-width: 50%;
    max-height: 30rem;
    border-radius: 10%;
    border-width: 1px;
    border-style: solid;
    border-color: #064f50;
    position: relative;
}

h1,
h3,
h4,
h5 {
    font-family: 'Playfair Display', serif;
    color: #00a4a6;
}

p,
a:not(.readMore) {
    font-family: 'Source Sans Pro', sans-serif;
    color: #00a4a6;
}

* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    list-style-type: none;
    text-decoration: none;
}

*,
*::before,
*::after {
    -webkit-box-sizing: inherit;
    box-sizing: inherit;
}


/*--------Styles for header and nav section----------*/
header {
    background-color: #00a4a6;
    width: 100%;
    line-height: 1px;
    position: fixed;
    top: 0;
    z-index: 1;
}

.logo {
    color: #fff;
    padding: 50px 0 30px 80px;
    font-weight: bold;
    font-size: 30px;
    text-align: left;

}


.main_nav {
    display: flex;
    justify-content: flex-end;
    list-style: none;
}

.main_nav li {
    margin-right: 60px;
    margin-bottom: 30px;
}

#nav {
    text-decoration: none;
    font-size: 28px;
    color: rgba(255, 255, 255, 1);
}

.main_nav li a {
    text-decoration: none;
    font-size: 28px;
    color: rgba(255, 255, 255, 1);

}

a:hover {
    color: rgba(255, 255, 255, 0.7);
}

/* body things */

/*--------Styles for footer----------*/


footer {
    background-color: #00a4a6;
    color: rgba(255, 255, 255, 1);
    height: 230px;
    position: relative;
}

footer .footer_container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    line-height: 30px;
    padding: 20px;
    margin-left: 200px;
}

footer .footer_container ul li {
    list-style: none;
}

footer .footer_container ul li a {
    text-decoration: none;
    color: rgba(255, 255, 255, 1);
    font-size: 1.2em;
    font-weight: bold;
}

footer .footer_bottom {
    background-color: #064f50;
    width: 100%;
    height: 50px;
    text-align: center;
    position: absolute;
    bottom: 0;
    left: 0%;
    padding: 5px;

}

footer section h4 {
    display: none;
}

/*------media queries---------*/
@media screen and (max-width: 800px) {

    img.distanceImg {
        max-width: 100%;
        border: 0;
    }

    .pDistance{
        margin: 5%;
    }

    a.readMore{
        margin-left: 30%;
    }

    .distances{
        position: relative;
    }

    .distanceCap {
        display: block;
        position: absolute;
        bottom: 0;
        background-color: rgba(0, 0, 0, .7);
        width: fit-content;
        border-bottom-left-radius: 10%;
        border-bottom-right-radius: 10%;
        padding-top: 0;
        padding-left: 1em;
        padding-bottom: 1em;
    }

    h1#distance {
        top: 70%;
        font-size: 1.5rem;
    }

    header {
        position: relative;
        height: 200px;
        width: 100%;
    }

    section.banner {
        margin-top: 0;
    }

    .main_nav {
        display: grid;
        grid-template-columns: 1fr, repeat(3, 1fr);
        justify-content: center;
        justify-items: center;
        padding-left: 80px;
        white-space: nowrap;
    }

    .fullwidth {
        align-content: center;
        grid-column: 1/4;
    }

    footer .footer_container {
        margin-left: 7rem;
    }

    footer {
        font-size: 70%;
        list-style: none;
    }

    footer .footer_bottom{
        width: 98.3%;
    }

}


@media screen and (max-width: 600px) {

    .distances{
        font-size: 70%;
    }



    h1#distance {
        top: 75%;
        font-size: 1rem;
    }

    header {
        height: 250px;
        width: 100%;
    }

    .main_nav {
        display: block;
    }


    footer {
        font-size: 37%;
        white-space: nowrap;
    }

    footer .footer_container {
        margin-left: 5rem;
    }


    main article div {
        line-height: 20px;
        margin: 50px 50px;
    }

    footer .footer_bottom{
        width: 97.2%;
    }

    .validators{
        max-height: 75%;
        max-width: 50%;
    }
    
}

